rusty-cdk-macros/tests/fails/iam_action_invalid_permission.rs
use rusty_cdk_macros::iam_action;

fn example() {
    let action = iam_action!("s3:InvalidAction");
}

fn main() {}
